# cpp-training-before-rest-hlf

./: .gitignore  readme.md
concepts-review/: readme.md
concepts-review/classes/: readme.md
concepts-review/classes/exercises/: classes-smaples  classes-smaples.cpp  encapsulation.cpp  simple  simple.cpp
concepts-review/containers/: readme.md
concepts-review/containers/exercises/: simple  simple.cpp
concepts-review/friends/: readme.md
concepts-review/friends/exercises/: simple  simple.cpp
concepts-review/idioms/: readme.md
concepts-review/idioms/exercises/: argument-evaluation  argument-evaluation.cpp  fixe-rule.cpp  lvalues-and-rvalues  lvalues-and-rvalues.cpp  macros  macros-troll  macros-troll.cpp  macros.cpp  move-semantics  move-semantics.cpp  move-semantics2  move-semantics2.cpp  rule-five  rule-five.cpp
concepts-review/mutex/: readme.md
concepts-review/mutex/exercises/: mutex  mutex.cpp
concepts-review/smart-pointers/: readme.md
concepts-review/smart-pointers/exercises/shared-pointers/: simple  simple.cpp
concepts-review/smart-pointers/exercises/unique-pointers/: a.out  simple.cpp  singletonPattern  singletonPattern.cpp
concepts-review/smart-pointers/exercises/weak-pointers/: simple  simple.cpp
rest/: CMakeLists.txt  readme.md
rest/src/: main.cpp
rest/src/examples/: asyncServer.cpp  httpclient.cpp  syncServer.cpp
rest/test/: test1.cpp  test2.cpp
tdd/: CMakeLists.txt  ExampleGtest[1]_include.cmake  Makefile  a.out  cmake_install.cmake  readme.md
tdd/cmakeFilesExamples/cmakefirsttry/: CMakeLists.txt
tdd/cmakeFilesExamples/cmakesimplerway/: CMakeLists.txt
tdd/include/: dummy.hpp  foo.hpp  foo_if.hpp  mock_foo.hpp
tdd/src/: dummy.cpp  foo.cpp
tdd/test/: example.cpp  testDummy.cpp
